@@ -409,15 +409,15 @@ nxwm
   This is a special configuration setup for the NxWM window manager
   UnitTest.  The NxWM window manager can be found here:
 
-    trunk/NxWidgets/nxwm
+    nuttx-code/NxWidgets/nxwm
 
   The NxWM unit test can be found at:
 
-    trunk/NxWidgets/UnitTests/nxwm
+    nuttx-code/NxWidgets/UnitTests/nxwm
 
   Documentation for installing the NxWM unit test can be found here:
 
-    trunk/NxWidgets/UnitTests/READEM.txt
+    nuttx-code/NxWidgets/UnitTests/READEM.txt
 
   NOTE:  There is an issue with running this example under the
   simulation.  In the default configuration, this example will
