@@ -947,21 +947,22 @@ Where <subdir> is one of the following:
     This is a special configuration setup for the NxWM window manager
     UnitTest.  The NxWM window manager can be found here:
 
-      trunk/NxWidgets/nxwm
+      nuttx-code/NxWidgets/nxwm
 
     The NxWM unit test can be found at:
 
-      trunk/NxWidgets/UnitTests/nxwm
+      nuttx-code/NxWidgets/UnitTests/nxwm
 
     Documentation for installing the NxWM unit test can be found here:
 
-      trunk/NxWidgets/UnitTests/README.txt
+      nuttx-code/NxWidgets/UnitTests/README.txt
 
-    Here is the quick summary of the build steps:
+    Here is the quick summary of the build steps (Assuming that all of
+    the required packages are available in a directory ~/nuttx-code):
 
     1. Intall the nxwm configuration
 
-       $ cd ~/nuttx/trunk/nuttx/tools
+       $ cd ~/nuttx-code/nuttx/tools
        $ ./configure.sh stm3220g-eval/nxwm
 
     2. Make the build context (only)
@@ -973,27 +974,27 @@ Where <subdir> is one of the following:
 
     3. Install the nxwm unit test
 
-       $ cd ~/nuttx/trunk/NxWidgets
-       $ tools/install.sh ~/nuttx/trunk/apps nxwm
+       $ cd ~/nuttx-code/NxWidgets
+       $ tools/install.sh ~/nuttx-code/apps nxwm
        Creating symbolic link
-        - To ~/nuttx/trunk/NxWidgets/UnitTests/nxwm
-        - At ~/nuttx/trunk/apps/external
+        - To ~/nuttx-code/NxWidgets/UnitTests/nxwm
+        - At ~/nuttx-code/apps/external
 
     4. Build the NxWidgets library
 
-       $ cd ~/nuttx/trunk/NxWidgets/libnxwidgets
-       $ make TOPDIR=~/nuttx/trunk/nuttx
+       $ cd ~/nuttx-code/NxWidgets/libnxwidgets
+       $ make TOPDIR=~/nuttx-code/nuttx
        ...
 
     5. Build the NxWM library
 
-       $ cd ~/nuttx/trunk/NxWidgets/nxwm
-       $ make TOPDIR=~//nuttx/trunk/nuttx
+       $ cd ~/nuttx-code/NxWidgets/nxwm
+       $ make TOPDIR=~/nuttx-code/nuttx
        ...
 
     6. Built NuttX with the installed unit test as the application
 
-       $ cd ~/nuttx/trunk/nuttx
+       $ cd ~/nuttx-code/nuttx
        $ make
 
   ostest:
